--- a/project/src/components/spinner/spinner.module.css
+++ b/project/src/components/spinner/spinner.module.css
@@ -1,15 +1,24 @@
-.lds-spinner {
+.wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 50px;
+}
+
+.spinner {
   display: inline-block;
   position: relative;
   width: 80px;
   height: 80px;
-  color: #9c2d9c;
+  color: #D9CA74;
 }
-.lds-spinner div {
+
+.spinner div {
   transform-origin: 40px 40px;
-  animation: lds-spinner 1.2s linear infinite;
+  animation: spinner 1.2s linear infinite;
 }
-.lds-spinner div:after {
+
+.spinner div:after {
   content: " ";
   display: block;
   position: absolute;
@@ -18,57 +27,68 @@
   width: 6px;
   height: 18px;
   border-radius: 20%;
-  background: #9c2d9c;
+  background: #D9CA74;
 }
-.lds-spinner div:nth-child(1) {
+
+.spinner div:nth-child(1) {
   transform: rotate(0deg);
   animation-delay: -1.1s;
 }
-.lds-spinner div:nth-child(2) {
+
+.spinner div:nth-child(2) {
   transform: rotate(30deg);
   animation-delay: -1s;
 }
-.lds-spinner div:nth-child(3) {
+
+.spinner div:nth-child(3) {
   transform: rotate(60deg);
   animation-delay: -0.9s;
 }
-.lds-spinner div:nth-child(4) {
+
+.spinner div:nth-child(4) {
   transform: rotate(90deg);
   animation-delay: -0.8s;
 }
-.lds-spinner div:nth-child(5) {
+.spinner div:nth-child(5) {
   transform: rotate(120deg);
   animation-delay: -0.7s;
 }
-.lds-spinner div:nth-child(6) {
+
+.spinner div:nth-child(6) {
   transform: rotate(150deg);
   animation-delay: -0.6s;
 }
-.lds-spinner div:nth-child(7) {
+
+.spinner div:nth-child(7) {
   transform: rotate(180deg);
   animation-delay: -0.5s;
 }
-.lds-spinner div:nth-child(8) {
+
+.spinner div:nth-child(8) {
   transform: rotate(210deg);
   animation-delay: -0.4s;
 }
-.lds-spinner div:nth-child(9) {
+
+.spinner div:nth-child(9) {
   transform: rotate(240deg);
   animation-delay: -0.3s;
 }
-.lds-spinner div:nth-child(10) {
+.spinner div:nth-child(10) {
   transform: rotate(270deg);
   animation-delay: -0.2s;
 }
-.lds-spinner div:nth-child(11) {
+
+.spinner div:nth-child(11) {
   transform: rotate(300deg);
   animation-delay: -0.1s;
 }
-.lds-spinner div:nth-child(12) {
+
+.spinner div:nth-child(12) {
   transform: rotate(330deg);
   animation-delay: 0s;
 }
-@keyframes lds-spinner {
+
+@keyframes spinner {
   0% {
     opacity: 1;
   }
