--- a/project/src/components/spinner/spinner.module.css
+++ b/project/src/components/spinner/spinner.module.css
@@ -1,3 +1,11 @@
+.fullScreen {
+  display: block;
+  z-index: 100;
+  position: absolute;
+  left: 45%;
+  top: 45%;
+}
+
 .wrapper {
   display: flex;
   align-items: center;
