--- a/project/src/components/spinner/spinner.module.css
+++ b/project/src/components/spinner/spinner.module.css
@@ -1,4 +1,13 @@
 .fullScreen {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  z-index: 100;
+}
+
+.centered {
   display: block;
   z-index: 100;
   position: absolute;
